--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,26 @@ body {
  background: #fffafb;
  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans';
 }
+
+.start{
+    display: block;
+}
+
+.firstblock {
+    display: flex;
+    width: 600px;
+    height: 200px;
+}
+
+.logo{
+    display: block;
+}
+
+.preview {
+    width: 800px;
+    margin-left:5%;
+}
+
 .bighead {
     color: #131515;
     background: #7de2d1;
@@ -12,21 +32,17 @@ body {
     height: 80px;
     text-align:center;
 }
+
 .miniheads {
     color: #2b2c28;
     background: #339989;
     width: 300px;
     height: 60px;
 }
-.firstblock {
-    margin-left:10%;
-    width: 400px;
-    height: 180px;
-}
-.imgomg {
-    
-    margin-right:5%;
-    background-image: url(https://image.shutterstock.com/image-vector/statistics-vector-editable-icon-260nw-1132374020.jpg);
-    background-position: right;
-    background-repeat: no-repeat;
+
+.firstpic {
+    width: 108%;
+    position: absolute;
+    top: 30px;
+    left: 1200px;
 }
