--- a/styles/style.css
+++ b/styles/style.css
@@ -4,18 +4,25 @@ body {
  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans';
 }
 
-.start{
+div {
     display: block;
 }
 
 .firstblock {
     display: flex;
+    margin-top:5%;
     width: 600px;
     height: 200px;
 }
 
 .logo{
-    display: block;
+    display: inline-flex;
+    height: 40px;
+    width: 100%;
+    font-size: large;
+    margin: 0;
+    box-shadow: 0px 5.25905px 10.1908px rgb(114 120 128 / 3%),
+                0px 2.79304px 5.20106px rgb(114 120 128 / 3%);
 }
 
 .preview {
@@ -44,5 +51,23 @@ body {
     width: 108%;
     position: absolute;
     top: 30px;
-    left: 1200px;
+    left: 60%;
+}
+.connection {
+    display: inline-flex;
+    margin-top:10px;
+    padding-left: 70%;
+    width: 100%;
+}
+
+.secondpg {
+    display: block;
+    color: #7de2d1;
+    font-size:x-large;
+    background-color: #2b2c28;
+    height: 190px;
+    width: 100%;
+    margin-top: 20px;
+    padding-top: 70px;
+    padding-left: 5%;
 }
